--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
@@ -36,8 +37,11 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/yaml": "^1.9.6",
     "commander": "^11.1.0",
-    "uuid": "^9.0.0"
+    "unix-dgram": "^2.0.6",
+    "uuid": "^9.0.0",
+    "yaml": "^2.8.0"
   },
   "engines": {
     "node": ">=18.0.0"
