Refactor Janus Protocol to Request-Based System
- Renamed command-related interfaces and types to request-related counterparts in protocol.ts.
- Updated JanusServer class to handle requests instead of commands, including changes to event names and handler registration methods.
- Introduced a new request-handler module to manage request handling with enhanced type safety and error mapping.
- Modified JSON-RPC error handling to align with the new request structure.
- Updated server setup tests to reflect changes in request definitions.
- Adjusted TypeScript configuration to exclude documentation and example directories from compilation.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "author": "Janus Project",
   "dependencies": {
     "@types/yaml": "^1.9.6",
-    "commander": "^11.1.0",
+    "commander": "^14.0.0",
+    "requester": "^11.1.0",
     "unix-dgram": "^2.0.6",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "yaml": "^2.8.0"
   },
   "description": "TypeScript implementation of the Janus Protocol",
