--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,8 @@
   "exclude": [
     "node_modules",
     "dist",
-    "**/*.test.ts"
+    "**/*.test.ts",
+    "src/docs/**/*",
+    "src/examples/**/*"
   ]
 }
